--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@mdi/js": "^5.3.45",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.3.2",
     "vuetify": "^2.2.30"
   },
   "devDependencies": {
+    "@mdi/font": "^5.3.45",
     "@nuxtjs/vuetify": "^1.11.2",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
