--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "main": "background.js",
   "dependencies": {
     "@mdi/js": "^5.3.45",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
-    "vuetify": "^2.2.30"
+    "vuetify": "^2.2.30",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@mdi/font": "^5.3.45",
